[gd_scene load_steps=8 format=4 uid="uid://br0le1q11h5vm"]

[ext_resource type="TileSet" uid="uid://7j3vkcdhxwrb" path="res://modules/TileSet/Ground.tres" id="1_36eyr"]
[ext_resource type="Script" uid="uid://btn2h2jlk5k4x" path="res://modules/Test/tutorial.gd" id="1_g4i6a"]
[ext_resource type="PackedScene" uid="uid://ckbe0vvra4kp2" path="res://modules/Player/Cat/cat.tscn" id="3_gs331"]
[ext_resource type="PackedScene" uid="uid://d2k3smpp8hlt5" path="res://modules/Player/Donkey/donkey.tscn" id="4_l3gid"]
[ext_resource type="PackedScene" uid="uid://cnxxdeo3sdwlw" path="res://modules/Player/Rooster/rooster.tscn" id="5_xul5q"]
[ext_resource type="PackedScene" uid="uid://tccsja70bqmy" path="res://modules/Player/Dog/dog.tscn" id="6_oujej"]
[ext_resource type="PackedScene" uid="uid://c3ogc5f178133" path="res://modules/MoveableBlock/stone.tscn" id="7_x1c2s"]

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_g4i6a")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 15
visibility_layer = 15
tile_map_data = PackedByteArray("AAABAP//AQAEAAMAAAACAP//AQAEAAMAAAADAP//AQAEAAMAAAAEAP//AQAEAAMAAAAFAP//AQAEAAMAAAAGAP//AQAEAAMAAAAHAP//AQAEAAMAAAAIAP//AQAEAAMAAAAJAP//AQAEAAMAAAAKAP//AQAEAAMAAAALAP//AQAEAAMAAAAMAP//AQAEAAMAAAANAP//AQAEAAMAAAAOAP//AQAEAAMAAAAPAP//AQAEAAMAAAAQAP//AQAEAAMAAAARAP//AQAEAAMAAAASAP//AQAEAAMAAAATAP//AQAEAAMAAAAUAP//AQAEAAMAAAAVAP//AQAEAAMAAAAWAP//AQAEAAMAAAAXAP//AQAEAAMAAAAYAP//AQAGAAQAAAAZAP//AQABAAAAAAD///7/AQAEAAMAAAAAAP7/AQAEAAMAAAABAP7/AQAEAAMAAAACAP7/AQAEAAMAAAADAP7/AQAEAAMAAAAEAP7/AQAEAAMAAAAFAP7/AQAGAAQAAAAGAP7/AQAEAAIAAAAHAP7/AQAEAAIAAAAIAP7/AQAEAAIAAAAJAP7/AQAEAAIAAAAKAP7/AQAEAAIAAAALAP7/AQAEAAIAAAAMAP7/AQAGAAUAAAANAP7/AQAEAAMAAAAOAP7/AQAEAAMAAAAPAP7/AQAEAAMAAAAQAP7/AQAEAAMAAAARAP7/AQAEAAMAAAASAP7/AQAEAAMAAAATAP7/AQAEAAMAAAAUAP7/AQAEAAMAAAAVAP7/AQAEAAMAAAAWAP7/AQAGAAQAAAAXAP7/AQAEAAIAAAAYAP7/AQABAAAAAAAAAP3/AQAEAAMAAAAAAPz/AQAEAAMAAAAAAPv/AQAEAAMAAAAAAPj/AQAFAAMAAAAAAPf/AQAFAAMAAAAAAPb/AQAFAAMAAAAAAPX/AQAFAAMAAAD///3/AQAEAAMAAAD///z/AQAEAAMAAAD///v/AQAEAAMAAAD///n/AQAEAAMAAAD///j/AQAEAAMAAAD///f/AQAEAAMAAAD///b/AQAEAAMAAAD///X/AQAEAAMAAAD///r/AQAEAAMAAAAAAPT/AQAFAAMAAAAAAPP/AQAFAAMAAAAAAPL/AQAFAAMAAAAAAPH/AQAFAAMAAAAAAPD/AQAFAAMAAAAAAO3/AQAFAAMAAAAAAO7/AQAFAAMAAAAAAO//AQAFAAMAAAD///T/AQAEAAMAAAD///P/AQAEAAMAAAD///L/AQAEAAMAAAD///H/AQAEAAMAAAD///D/AQAEAAMAAAD//+//AQAEAAMAAAD//+7/AQAEAAMAAAD//+3/AQAEAAMAAAAEAP3/AQAEAAMAAAABAP3/AQAEAAMAAAABAPv/AQAEAAMAAAABAPz/AQAEAAMAAAACAPz/AQAEAAMAAAACAP3/AQAEAAMAAAADAP3/AQAEAAMAAAAAAPr/AQAGAAQAAAAAAPn/AQAFAAMAAAABAPr/AQAEAAIAAAACAPr/AQAEAAIAAAADAPr/AQAEAAIAAAAEAPr/AQAEAAIAAAAFAPr/AQAFAAQAAAAFAPv/AQAFAAMAAAAFAPz/AQAFAAMAAAAFAP3/AQAFAAMAAAAEAPz/AQAEAAMAAAAEAPv/AQAEAAMAAAADAPv/AQAEAAMAAAADAPz/AQAEAAMAAAACAPv/AQAEAAMAAAAFAPn/AQACAAMAAAAFAPj/AQACAAMAAAAFAPf/AQACAAMAAAAFAPb/AQACAAMAAAAFAPX/AQACAAMAAAAFAPT/AQACAAIAAAAMAP3/AQAAAAAAAAANAP3/AQAEAAIAAAAOAP3/AQAEAAIAAAAPAP3/AQAEAAIAAAAQAP3/AQAEAAIAAAARAP3/AQAGAAUAAAARAPz/AQAAAAAAAAASAPz/AQAEAAIAAAATAPz/AQAEAAIAAAATAP3/AQAEAAMAAAASAP3/AQAEAAMAAAAUAPz/AQAEAAIAAAAVAPz/AQABAAAAAAAUAP3/AQAEAAMAAAAVAP3/AQAGAAQAAAAWAP3/AQABAAAAAAAaAPv/AQAEAAMAAAAbAPv/AQAEAAMAAAAcAPv/AQAEAAMAAAAcAPz/AQAEAAMAAAAbAPz/AQAEAAMAAAAdAPv/AQAEAAMAAAAeAPv/AQAEAAMAAAAdAPr/AQAEAAIAAAAcAPr/AQAEAAIAAAAbAPr/AQAEAAIAAAAaAPr/AQAEAAIAAAAZAPr/AQAAAAAAAAAeAPr/AQAEAAIAAAAfAPr/AQAEAAIAAAAdAPz/AQAEAAMAAAAeAPz/AQAEAAMAAAAfAPz/AQAEAAMAAAAfAPv/AQAEAAMAAAAgAPr/AQAEAAIAAAAhAPr/AQAEAAIAAAAhAPv/AQAEAAMAAAAiAPv/AQAEAAMAAAAgAPv/AQAEAAMAAAAiAPr/AQAEAAIAAAAjAPr/AQABAAAAAAAZAPv/AQAAAAUAAAAaAPz/AQABAAYAAAAgAPz/AQAEAAMAAAAhAPz/AQAAAAYAAAAdAP3/AQAEAAMAAAAdAP7/AQAEAAMAAAAdAP//AQAEAAMAAAAeAP3/AQAEAAMAAAAeAP7/AQAEAAMAAAAeAP//AQAEAAMAAAAfAP3/AQAEAAMAAAAfAP7/AQAAAAYAAAAgAP3/AQAAAAYAAAAcAP3/AQAAAAUAAAAjAPv/AQABAAUAAAA4AP//AQAEAAMAAAA5AP//AQAEAAMAAAA6AP//AQAEAAMAAAA7AP//AQAEAAMAAAA8AP//AQAEAAMAAAA9AP//AQAEAAMAAAA+AP//AQAFAAMAAAA4AP7/AQAEAAMAAAA4AP3/AQAEAAMAAAA3AP3/AQADAAMAAAA3APz/AQAAAAAAAAA4APz/AQAEAAIAAAA3AP7/AQADAAMAAAA3AP//AQADAAMAAAA5AP3/AQAEAAMAAAA5APz/AQAEAAIAAAA5AP7/AQAEAAMAAAA6AP7/AQAEAAMAAAA9AP7/AQAEAAMAAAA8AP7/AQAEAAMAAAA7AP7/AQAEAAMAAAA+AP7/AQAFAAMAAAA9AP3/AQAEAAMAAAA8AP3/AQAEAAMAAAA7AP3/AQAEAAMAAAA6AP3/AQAEAAMAAAA6APz/AQAEAAIAAAA7APz/AQAEAAIAAAA8APz/AQAEAAIAAAA9APz/AQAEAAIAAAA+APz/AQABAAAAAAA+AP3/AQAFAAMAAABEAP//AQADAAMAAABEAP7/AQADAAMAAABEAP3/AQADAAMAAABEAPz/AQAAAAAAAABFAPz/AQAEAAIAAABFAP3/AQAEAAMAAABFAP7/AQAEAAMAAABFAP//AQAEAAMAAABGAP//AQAEAAMAAABGAP7/AQAEAAMAAABGAP3/AQAEAAMAAABGAPz/AQAEAAIAAABHAPz/AQAEAAIAAABHAP3/AQAEAAMAAABHAP7/AQAEAAMAAABHAP//AQAEAAMAAABIAP//AQAFAAMAAABIAP7/AQAFAAMAAABIAP3/AQAFAAMAAABIAPz/AQABAAAAAABRAPv/AQAEAAIAAABQAPv/AQAAAAAAAABTAPv/AQAEAAIAAABTAPz/AQAEAAMAAABSAPz/AQAEAAMAAABRAPz/AQAEAAMAAABSAP3/AQAEAAMAAABTAP3/AQAEAAMAAABTAP7/AQAEAAMAAABTAP//AQAEAAMAAABUAP//AQAEAAMAAABUAP7/AQAEAAMAAABUAP3/AQAEAAMAAABUAPz/AQAEAAMAAABUAPv/AQAEAAIAAABVAPv/AQAEAAIAAABVAPz/AQAEAAMAAABVAP3/AQAEAAMAAABVAP7/AQAEAAMAAABVAP//AQAEAAMAAABWAPv/AQAEAAIAAABWAPz/AQAEAAMAAABXAPv/AQAEAAIAAABYAPv/AQAEAAIAAABQAPz/AQAAAAUAAABRAP3/AQAAAAUAAABSAP7/AQAAAAUAAABWAP3/AQAEAAMAAABXAPz/AQAEAAMAAABYAPz/AQAEAAMAAABSAPv/AQAEAAIAAABTAAAAAQAEAAMAAABUAAAAAQAEAAQAAABVAAAAAQAEAAQAAABEAAAAAQAAAAEAAABFAAAAAQAEAAQAAABGAAAAAQAEAAQAAABHAAAAAQAEAAQAAABIAAAAAQABAAEAAAA3AAAAAQAAAAEAAAA4AAAAAQAEAAQAAAA5AAAAAQAEAAQAAAA6AAAAAQAEAAQAAAA7AAAAAQAEAAQAAAA8AAAAAQAEAAQAAAA9AAAAAQAEAAQAAAA+AAAAAQABAAEAAABWAP7/AQAEAAMAAABWAP//AQAEAAMAAABWAAAAAQAEAAQAAABXAP7/AQAEAAMAAABXAP3/AQAEAAMAAABYAP3/AQAEAAMAAABXAP//AQAEAAMAAABXAAAAAQAEAAMAAABYAP7/AQAEAAMAAABZAPz/AQAEAAMAAABZAPv/AQAEAAIAAABaAPv/AQAEAAIAAABbAPv/AQABAAAAAABbAPz/AQABAAEAAABaAPz/AQAEAAQAAABZAP3/AQAEAAMAAAAAAP//AQAEAAMAAAD/////AQADAAMAAABhAPj/AQACAAAAAABiAPj/AQADAAAAAABlAAAAAQAEAAMAAABlAP//AQAEAAMAAABkAP3/AQAEAAMAAABkAPz/AQAEAAMAAABkAPv/AQAEAAMAAABkAPr/AQAEAAMAAABjAPr/AQAEAAMAAABjAPn/AQAEAAMAAABjAPj/AQAEAAIAAABkAPj/AQAEAAIAAABkAPn/AQAEAAMAAABlAPn/AQAEAAMAAABlAPr/AQAEAAMAAABlAPv/AQAEAAMAAABlAPz/AQAEAAMAAABlAP3/AQAEAAMAAABlAP7/AQAEAAMAAABmAPz/AQAEAAMAAABmAP3/AQAEAAMAAABmAP7/AQAEAAMAAABmAP//AQAEAAMAAABmAAAAAQAEAAQAAABmAPv/AQAEAAMAAABmAPr/AQAEAAMAAABmAPn/AQAEAAMAAABnAPv/AQAEAAMAAABnAPz/AQAEAAMAAABnAP3/AQAEAAMAAABnAP7/AQAEAAMAAABnAP//AQAEAAMAAABnAAAAAQAEAAQAAABnAPr/AQAEAAMAAABnAPn/AQAEAAMAAABnAPj/AQAEAAIAAABmAPj/AQAEAAIAAABlAPj/AQAEAAIAAABoAPj/AQAEAAIAAABpAPj/AQAEAAIAAABqAPj/AQAEAAIAAABqAPn/AQAEAAMAAABqAPr/AQAEAAMAAABqAPv/AQAEAAMAAABqAPz/AQAEAAMAAABqAP3/AQAEAAMAAABpAPz/AQAEAAMAAABpAPv/AQAEAAMAAABpAPr/AQAEAAMAAABpAPn/AQAEAAMAAABoAPn/AQAEAAMAAABoAPr/AQAEAAMAAABoAPv/AQAEAAMAAABoAPz/AQAEAAMAAABoAP3/AQAEAAMAAABoAP7/AQAEAAMAAABoAP//AQAEAAMAAABoAAAAAQAEAAQAAABpAAAAAQAEAAQAAABqAP//AQAEAAMAAABqAP7/AQAEAAMAAABpAP3/AQAEAAMAAABpAP7/AQAEAAMAAABpAP//AQAEAAMAAABqAAAAAQAEAAQAAABrAPn/AQAEAAMAAABrAPj/AQAEAAIAAABrAPr/AQAEAAMAAABrAPv/AQAEAAMAAABrAPz/AQAEAAMAAABrAP3/AQAEAAMAAABrAP7/AQAEAAMAAABrAP//AQAEAAMAAABrAAAAAQAEAAQAAABsAAAAAQAEAAQAAABsAP//AQAEAAMAAABsAP7/AQAEAAMAAABsAP3/AQAEAAMAAABtAP3/AQAEAAMAAABtAPz/AQAEAAMAAABtAPv/AQAEAAMAAABtAPr/AQAEAAMAAABtAPn/AQAEAAMAAABtAPj/AQAEAAMAAABsAPj/AQAEAAMAAABsAPf/AQAEAAMAAABtAP7/AQAEAAMAAABtAP//AQAEAAMAAABtAAAAAQAEAAQAAABsAPz/AQAEAAMAAABsAPv/AQAEAAMAAABsAPr/AQAEAAMAAABsAPn/AQAEAAMAAABtAPf/AQAEAAMAAABtAPb/AQAEAAMAAABsAPb/AQAEAAMAAABsAPX/AQAEAAIAAABtAPX/AQAEAAIAAABrAPX/AQAEAAIAAABqAPX/AQAEAAIAAABpAPX/AQACAAAAAABrAPb/AQAEAAMAAABuAPb/AQAEAAMAAABuAPX/AQAEAAIAAABvAPX/AQAEAAIAAABvAPb/AQAEAAMAAABuAPf/AQAEAAMAAABuAPj/AQAEAAMAAABuAPn/AQAEAAMAAABuAPr/AQAEAAMAAABuAPv/AQAEAAMAAABuAPz/AQAEAAMAAABuAP3/AQAEAAMAAABuAP7/AQAEAAMAAABuAP//AQAEAAMAAABuAAAAAQAEAAQAAABvAAAAAQAEAAQAAABvAP//AQAEAAMAAABvAP7/AQAEAAMAAABwAAAAAQAEAAQAAABwAP//AQAEAAMAAABxAP//AQAEAAMAAABxAP7/AQAEAAMAAAByAP3/AQAEAAMAAAByAPv/AQAEAAMAAAByAPz/AQAEAAMAAABzAPv/AQAEAAMAAABzAPz/AQAEAAMAAABzAP3/AQAEAAMAAABzAP7/AQAEAAMAAABzAP//AQAEAAMAAAByAP//AQAEAAMAAAByAAAAAQAEAAQAAABxAAAAAQAEAAQAAABzAAAAAQAEAAQAAAB0AAAAAQAEAAQAAAB1AAAAAQAEAAQAAAB2AAAAAQAEAAQAAAB3AAAAAQAEAAQAAAB4AAAAAQAEAAQAAAB5AAAAAQAEAAQAAAB7AAAAAQAEAAQAAAB6AAAAAQAEAAQAAAB8AAAAAQAEAAQAAAB9AAAAAQAEAAQAAAB+AAAAAQAEAAQAAAB/AAAAAQAEAAQAAACAAAAAAQAEAAQAAACBAAAAAQAEAAQAAACCAAAAAQAEAAQAAACCAP//AQAEAAMAAACBAP//AQAEAAMAAAB/AP//AQAEAAMAAACAAP//AQAEAAMAAAB8AP//AQAEAAMAAAB9AP//AQAEAAMAAAB+AP//AQAEAAMAAAB6AP//AQAEAAMAAAB7AP//AQAEAAMAAAB5AP//AQAEAAMAAAB4AP//AQAEAAMAAAB3AP//AQAEAAMAAAB1AP//AQAEAAMAAAB2AP//AQAEAAMAAAB0AP//AQAEAAMAAACNAAAAAQAEAAQAAACNAP//AQAEAAMAAACNAP7/AQAEAAMAAACNAP3/AQAEAAMAAACNAPz/AQAEAAMAAACNAPv/AQAEAAMAAACNAPr/AQAEAAMAAACNAPn/AQAEAAMAAACNAPj/AQAEAAMAAACNAPf/AQAEAAMAAACNAPb/AQAEAAMAAACNAPX/AQAEAAIAAACMAAAAAQAEAAQAAACMAP//AQAEAAMAAACMAP7/AQAEAAMAAACMAP3/AQAEAAMAAACMAPz/AQAEAAMAAACMAPv/AQAEAAMAAACMAPr/AQAEAAMAAACMAPn/AQAEAAMAAACMAPj/AQAEAAMAAACMAPf/AQAEAAMAAACMAPb/AQAEAAMAAACMAPX/AQAEAAIAAACLAAAAAQAEAAQAAACLAP//AQAEAAMAAACLAP7/AQAEAAMAAACLAP3/AQAEAAMAAACLAPz/AQAEAAMAAACLAPv/AQAEAAMAAACLAPr/AQAEAAMAAACLAPn/AQAEAAMAAACLAPj/AQAEAAMAAACLAPf/AQAEAAMAAACLAPb/AQAEAAMAAACLAPX/AQAEAAIAAACKAAAAAQAEAAQAAACKAP//AQAEAAMAAACKAP7/AQAEAAMAAACKAP3/AQAEAAMAAACKAPz/AQAEAAMAAACKAPv/AQAEAAMAAACKAPr/AQAEAAMAAACKAPn/AQAEAAMAAACKAPj/AQAEAAMAAACKAPf/AQAEAAMAAACKAPb/AQAEAAMAAACKAPX/AQAEAAIAAACJAAAAAQAEAAQAAACJAP//AQAEAAMAAACJAP7/AQAEAAMAAACJAP3/AQAEAAMAAACJAPz/AQAEAAMAAACJAPv/AQAEAAMAAACJAPr/AQAEAAMAAACJAPn/AQAEAAMAAACJAPj/AQAEAAMAAACJAPf/AQAEAAMAAACJAPb/AQAEAAMAAACJAPX/AQAEAAIAAACIAAAAAQAEAAQAAACIAP//AQAEAAMAAACIAP7/AQAEAAMAAACIAP3/AQAEAAMAAACIAPz/AQAEAAMAAACIAPv/AQAEAAMAAACIAPr/AQAEAAMAAACIAPn/AQAEAAMAAACIAPj/AQAEAAMAAACIAPf/AQAEAAMAAACIAPb/AQAEAAMAAACIAPX/AQAGAAQAAACHAAAAAQAEAAQAAACHAP//AQAEAAMAAACHAP7/AQAEAAMAAACHAP3/AQAEAAMAAACHAPz/AQAEAAMAAACHAPv/AQAEAAMAAACHAPr/AQAEAAMAAACHAPn/AQAEAAMAAACHAPj/AQAEAAMAAACHAPf/AQAEAAMAAACHAPb/AQAEAAMAAACHAPX/AQAEAAMAAACGAAAAAQAEAAQAAACGAP//AQAEAAMAAACGAP7/AQAEAAMAAACGAP3/AQAEAAMAAACGAPz/AQAEAAMAAACGAPv/AQAEAAMAAACGAPr/AQAEAAMAAACGAPn/AQAEAAMAAACGAPj/AQAEAAMAAACGAPf/AQAEAAMAAACGAPb/AQAEAAMAAACGAPX/AQAEAAMAAACFAAAAAQAEAAQAAACFAP//AQAEAAMAAACFAP7/AQAEAAMAAACFAP3/AQAEAAMAAACFAPz/AQAEAAMAAACFAPv/AQAEAAMAAACFAPr/AQAEAAMAAACFAPn/AQAEAAMAAACFAPj/AQAEAAMAAACFAPf/AQAEAAMAAACFAPb/AQAEAAMAAACFAPX/AQAEAAMAAACEAAAAAQAEAAQAAACEAP//AQAEAAMAAACEAP7/AQAEAAMAAACEAP3/AQAEAAMAAACEAPz/AQAEAAMAAACEAPv/AQAEAAMAAACEAPr/AQAEAAMAAACEAPn/AQAEAAMAAACEAPj/AQAEAAMAAACEAPf/AQAEAAMAAACEAPb/AQAEAAMAAACEAPX/AQAEAAMAAACDAAAAAQAEAAQAAACDAP//AQAEAAMAAACDAP7/AQAEAAMAAACDAP3/AQAEAAMAAACDAPz/AQAEAAMAAACDAPv/AQAEAAMAAACDAPr/AQAEAAMAAACDAPn/AQAEAAMAAACDAPj/AQAEAAMAAACDAPf/AQAEAAMAAACDAPb/AQAEAAMAAACDAPX/AQAEAAMAAACCAP7/AQAEAAMAAACCAP3/AQAEAAMAAACCAPz/AQAEAAMAAACCAPv/AQAEAAMAAACCAPr/AQAEAAMAAACCAPn/AQAEAAMAAACCAPj/AQAEAAMAAACCAPf/AQAEAAMAAACCAPb/AQAEAAMAAACCAPX/AQAEAAMAAACBAP7/AQAEAAMAAACBAP3/AQAEAAMAAACBAPz/AQAEAAMAAACBAPv/AQAEAAMAAACBAPr/AQAEAAMAAACBAPn/AQAEAAMAAACBAPj/AQAEAAMAAACBAPf/AQAEAAMAAACBAPb/AQAEAAMAAACBAPX/AQAEAAMAAACAAP7/AQAEAAMAAACAAP3/AQAEAAMAAACAAPz/AQAEAAMAAACAAPv/AQAEAAMAAACAAPr/AQAEAAMAAACAAPn/AQAEAAMAAACAAPj/AQAEAAMAAACAAPf/AQAEAAMAAACAAPb/AQAEAAMAAAB/AP7/AQAEAAMAAAB/AP3/AQAEAAMAAAB/APz/AQAEAAMAAAB/APv/AQAEAAMAAAB/APr/AQAEAAMAAAB/APn/AQAEAAMAAAB/APj/AQAEAAMAAAB/APf/AQAEAAMAAAB/APb/AQAEAAMAAAB/APX/AQAEAAMAAAB+AP7/AQAEAAMAAAB+AP3/AQAEAAMAAAB+APz/AQAEAAMAAAB+APv/AQAEAAMAAAB+APr/AQAEAAMAAAB+APn/AQAEAAMAAAB+APj/AQAEAAMAAAB+APf/AQAEAAMAAAB+APb/AQAEAAMAAAB+APX/AQAEAAMAAAB9AP7/AQAEAAMAAAB9AP3/AQAEAAMAAAB9APz/AQAEAAMAAAB9APv/AQAEAAMAAAB9APr/AQAEAAMAAAB9APn/AQAEAAMAAAB9APj/AQAEAAMAAAB9APf/AQAEAAMAAAB9APb/AQAEAAMAAAB9APX/AQAEAAMAAAB8AP7/AQAEAAMAAAB8AP3/AQAEAAMAAAB8APz/AQAEAAMAAAB8APv/AQAEAAMAAAB8APr/AQAEAAMAAAB8APn/AQAEAAMAAAB8APj/AQAEAAMAAAB8APf/AQAEAAMAAAB8APb/AQAEAAMAAAB8APX/AQAEAAMAAAB7AP7/AQAEAAMAAAB7AP3/AQAEAAMAAAB7APz/AQAEAAMAAAB7APv/AQAEAAMAAAB7APr/AQAEAAMAAAB7APn/AQAEAAMAAAB7APj/AQAEAAMAAAB7APf/AQAEAAMAAAB7APb/AQAEAAMAAAB7APX/AQAEAAMAAAB6AP7/AQAEAAMAAAB6AP3/AQAEAAMAAAB6APz/AQAEAAMAAAB6APv/AQAEAAMAAAB6APr/AQAEAAMAAAB6APn/AQAEAAMAAAB6APj/AQAEAAMAAAB6APf/AQAEAAMAAAB6APb/AQAEAAMAAAB6APX/AQAEAAMAAAB5AP7/AQAEAAMAAAB5AP3/AQAEAAMAAAB5APz/AQAEAAMAAAB5APv/AQAEAAMAAAB5APr/AQAEAAMAAAB5APn/AQAEAAMAAAB5APj/AQAEAAMAAAB5APf/AQAEAAMAAAB5APb/AQAEAAMAAAB5APX/AQAEAAMAAAB4AP7/AQAEAAMAAAB4AP3/AQAEAAMAAAB4APz/AQAEAAMAAAB4APv/AQAEAAMAAAB4APr/AQAEAAMAAAB4APn/AQAEAAMAAAB4APj/AQAEAAMAAAB4APf/AQAEAAMAAAB4APb/AQAEAAMAAAB4APX/AQAEAAMAAAB3AP7/AQAEAAMAAAB3AP3/AQAEAAMAAAB3APz/AQAEAAMAAAB3APv/AQAEAAMAAAB3APr/AQAEAAMAAAB3APn/AQAEAAMAAAB3APj/AQAEAAMAAAB3APf/AQAEAAMAAAB3APb/AQAEAAMAAAB3APX/AQAEAAMAAAB2AP7/AQAEAAMAAAB2AP3/AQAEAAMAAAB2APz/AQAEAAMAAAB2APv/AQAEAAMAAAB2APr/AQAEAAMAAAB2APn/AQAEAAMAAAB2APj/AQAEAAMAAAB2APf/AQAEAAMAAAB2APb/AQAEAAMAAAB2APX/AQAEAAMAAAB1AP7/AQAEAAMAAAB1AP3/AQAEAAMAAAB1APz/AQAEAAMAAAB1APv/AQAEAAMAAAB1APr/AQAEAAMAAAB1APn/AQAEAAMAAAB1APj/AQAEAAMAAAB1APf/AQAEAAMAAAB1APb/AQAEAAMAAAB1APX/AQAEAAMAAAB0AP7/AQAEAAMAAAB0AP3/AQAEAAMAAAB0APz/AQAEAAMAAAB0APv/AQAEAAMAAAB0APr/AQAEAAMAAAB0APn/AQAEAAMAAAB0APj/AQAEAAMAAAB0APf/AQAEAAMAAAB0APb/AQAEAAMAAAB0APX/AQAEAAMAAABzAPr/AQAEAAMAAABzAPn/AQAEAAMAAABzAPj/AQAEAAMAAABzAPf/AQAEAAMAAABzAPb/AQAEAAMAAABzAPX/AQAEAAMAAAByAP7/AQAEAAMAAAByAPr/AQAEAAMAAAByAPn/AQAEAAMAAAByAPj/AQAEAAMAAAByAPf/AQAEAAMAAAByAPb/AQAEAAMAAAByAPX/AQAEAAMAAABxAP3/AQAEAAMAAABxAPz/AQAEAAMAAABxAPv/AQAEAAMAAABxAPr/AQAEAAMAAABxAPn/AQAEAAMAAABxAPj/AQAEAAMAAABxAPf/AQAEAAMAAABxAPb/AQAEAAMAAABxAPX/AQAEAAMAAABwAP7/AQAEAAMAAABwAP3/AQAEAAMAAABwAPz/AQAEAAMAAABwAPv/AQAEAAMAAABwAPr/AQAEAAMAAABwAPn/AQAEAAMAAABwAPj/AQAEAAMAAABwAPf/AQAEAAMAAABwAPb/AQAEAAMAAABwAPX/AQAEAAIAAABvAP3/AQAEAAMAAABvAPz/AQAEAAMAAABvAPv/AQAEAAMAAABvAPr/AQAEAAMAAABvAPn/AQAEAAMAAABvAPj/AQAEAAMAAABvAPf/AQAEAAMAAABxAPT/AQAEAAMAAABxAPP/AQAEAAMAAABwAPP/AQAEAAMAAABwAPL/AQAEAAIAAABvAPL/AQAEAAIAAABuAPL/AQACAAAAAABxAPL/AQAEAAIAAAByAPL/AQAEAAIAAAByAPP/AQAEAAMAAAByAPT/AQAEAAMAAABzAPL/AQAEAAIAAAB0APL/AQAEAAIAAAB1APL/AQAEAAIAAAB2APP/AQAEAAMAAAB1APP/AQAEAAMAAAB0APP/AQAEAAMAAAB0APT/AQAEAAMAAABzAPT/AQAEAAMAAABzAPP/AQAEAAMAAAB3APP/AQAEAAMAAAB3APT/AQAEAAMAAAB2APT/AQAEAAMAAAB1APT/AQAEAAMAAAB2APL/AQAEAAIAAAB3APL/AQAEAAIAAAB4APL/AQAEAAIAAABkAP7/AQAAAAUAAABjAPv/AQAAAAUAAABiAPn/AQAAAAUAAABaAP3/AQAAAAYAAABZAP7/AQAAAAYAAABYAP//AQAAAAYAAABrAPf/AQAAAAUAAABqAPb/AQAEAAMAAABpAPb/AQABAAYAAABuAPP/AQABAAYAAABwAPT/AQAAAAUAAABvAPP/AQAEAAMAAAB4APT/AQAEAAMAAAB4APP/AQAEAAMAAAB5APL/AQAEAAIAAAB6APL/AQAEAAIAAAB6APP/AQAEAAMAAAB5APP/AQAEAAMAAAB5APT/AQAEAAMAAAB6APT/AQAEAAMAAAB7APT/AQAEAAMAAAB7APL/AQAGAAUAAAB7APP/AQAEAAMAAAB7APH/AQADAAMAAAB7APD/AQADAAMAAAB7AO//AQADAAMAAAB7AO7/AQADAAMAAAB7AO3/AQADAAMAAAB7AOz/AQADAAMAAAB7AOv/AQADAAMAAAB8AO//AQAEAAMAAAB8APD/AQAEAAMAAAB8APH/AQAEAAMAAAB8APL/AQAEAAMAAAB8APP/AQAEAAMAAAB8APT/AQAEAAMAAAB8AO7/AQAEAAMAAAB8AO3/AQAEAAMAAAB8AOz/AQAEAAMAAAB8AOv/AQAEAAMAAAB9AOv/AQAEAAMAAAB9AOz/AQAEAAMAAAB9AO3/AQAEAAMAAAB9AO7/AQAEAAMAAAB9AO//AQAEAAMAAAB9APD/AQAEAAMAAAB9APH/AQAEAAMAAAB9APL/AQAEAAMAAAB9APP/AQAEAAMAAAB+APP/AQAEAAMAAAB/APP/AQAEAAMAAAB/APL/AQAEAAMAAAB+APH/AQAEAAMAAAB+APD/AQAEAAMAAAB+AO//AQAEAAMAAAB+AO7/AQAEAAMAAAB+AO3/AQAEAAMAAAB/AO3/AQAEAAMAAAB+AOz/AQAEAAMAAAB+AOv/AQAEAAMAAAB+AOr/AQAEAAMAAAB+APL/AQAEAAMAAAB+APT/AQAEAAMAAAB9APT/AQAEAAMAAAB/APT/AQAEAAMAAAB/APH/AQAEAAMAAAB/APD/AQAEAAMAAAB/AO//AQAEAAMAAAB/AO7/AQAEAAMAAAB/AOz/AQAEAAMAAAB/AOv/AQAEAAMAAAB/AOr/AQAEAAMAAAB/AOn/AQAGAAQAAAB/AOj/AQAFAAMAAAB/AOf/AQAFAAMAAAB+AOb/AQAEAAIAAAB8AOb/AQAAAAAAAAB7AOf/AQAAAAAAAAB7AOj/AQADAAMAAAB7AOn/AQADAAMAAAB8AOr/AQAEAAMAAAB8AOn/AQAEAAMAAAB9AOn/AQAEAAMAAAB9AOj/AQAEAAMAAAB+AOj/AQAEAAMAAAB+AOn/AQAEAAMAAAB9AOr/AQAEAAMAAAB7AOr/AQADAAMAAAB8AOj/AQAEAAMAAAB8AOf/AQAGAAUAAAB9AOf/AQAEAAMAAAB+AOf/AQAEAAMAAAB/AOb/AQABAAAAAAB9AOb/AQAEAAIAAACAAPX/AQAEAAMAAACAAOn/AQABAAAAAACAAOr/AQAFAAMAAACAAOv/AQAFAAMAAACAAOz/AQAFAAMAAACAAO3/AQAFAAMAAACAAO7/AQAFAAMAAACAAO//AQAGAAQAAACAAPD/AQAEAAMAAACAAPH/AQAEAAMAAACAAPL/AQAEAAMAAACAAPP/AQAEAAMAAACAAPT/AQAEAAMAAACBAPT/AQAEAAMAAACCAPT/AQAEAAMAAACBAPP/AQAEAAMAAACBAPL/AQAGAAQAAACBAPD/AQAFAAMAAACBAO//AQABAAAAAACBAPH/AQAFAAMAAACCAPP/AQAGAAQAAACDAPP/AQAEAAIAAACDAPT/AQAEAAMAAACEAPT/AQAGAAQAAACGAPT/AQAEAAIAAACFAPT/AQAEAAIAAACCAPL/AQABAAAAAACEAPP/AQABAAAAAACHAPT/AQAEAAIAAACIAPT/AQABAAAAAACOAPX/AQAEAAIAAACOAPb/AQAEAAMAAACOAPf/AQAEAAMAAACOAPj/AQAEAAMAAACOAPn/AQAEAAMAAACOAPr/AQAEAAMAAACOAPv/AQAEAAMAAACOAPz/AQAEAAMAAACOAP3/AQAEAAMAAACOAP7/AQAEAAMAAACOAP//AQAEAAMAAACOAAAAAQAEAAQAAACPAAAAAQAEAAQAAACQAAAAAQAEAAQAAACQAP//AQAEAAMAAACQAP7/AQAEAAMAAACQAP3/AQAEAAMAAACQAPz/AQAEAAMAAACQAPv/AQAEAAMAAACRAPv/AQAFAAMAAACRAPr/AQAFAAMAAACRAPn/AQAFAAMAAACQAPj/AQAEAAMAAACQAPf/AQAEAAMAAACQAPb/AQAEAAMAAACQAPX/AQAEAAIAAACPAPX/AQAEAAIAAACPAPb/AQAEAAMAAACPAP3/AQAEAAMAAACRAAAAAQABAAEAAACRAP//AQAFAAMAAACRAP7/AQAFAAMAAACRAP3/AQAFAAMAAACRAPz/AQAFAAMAAACRAPj/AQAFAAMAAACRAPf/AQAFAAMAAACPAPf/AQAEAAMAAACPAPj/AQAEAAMAAACPAPn/AQAEAAMAAACPAPr/AQAEAAMAAACPAPv/AQAEAAMAAACPAPz/AQAEAAMAAACPAP7/AQAEAAMAAACPAP//AQAEAAMAAACQAPr/AQAEAAMAAACQAPn/AQAEAAMAAACRAPb/AQAFAAMAAACRAPX/AQABAAAAAAAZAAAAAQABAAEAAAAYAAAAAQAEAAQAAAAXAAAAAQAEAAQAAAAWAAAAAQAEAAQAAAAVAAAAAQAEAAQAAAAUAAAAAQAEAAQAAAATAAAAAQAEAAQAAAASAAAAAQAEAAQAAAARAAAAAQAEAAQAAAAQAAAAAQAEAAQAAAAPAAAAAQAEAAQAAAAOAAAAAQAEAAQAAAANAAAAAQAEAAQAAAAMAAAAAQAEAAQAAAALAAAAAQAEAAQAAAAKAAAAAQAEAAQAAAAJAAAAAQAEAAQAAAAIAAAAAQAEAAQAAAAHAAAAAQAEAAQAAAAGAAAAAQAEAAQAAAAFAAAAAQAEAAQAAAAEAAAAAQAEAAQAAAADAAAAAQAEAAQAAAACAAAAAQAEAAQAAAABAAAAAQAEAAQAAAAAAAAAAQAEAAQAAAD//wAAAQAAAAEAAAAdAAAAAQAEAAMAAAAeAAAAAQAEAAMAAAA=")
tile_set = ExtResource("1_36eyr")

[node name="Cat" parent="." instance=ExtResource("3_gs331")]
position = Vector2(2778, -173)
speed = 300.0

[node name="Donkey" parent="." instance=ExtResource("4_l3gid")]
position = Vector2(4324, -415)

[node name="Rooster" parent="." instance=ExtResource("5_xul5q")]
position = Vector2(87, -224)

[node name="Dog" parent="." instance=ExtResource("6_oujej")]
position = Vector2(4559, -375)

[node name="Stone" parent="." instance=ExtResource("7_x1c2s")]
position = Vector2(407, 596)

[node name="Step1" type="RichTextLabel" parent="."]
offset_left = 13.0
offset_top = -177.0
offset_right = 178.0
offset_bottom = -108.0
text = "Use A and D to move left and right
and Space to jump"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Step2" type="RichTextLabel" parent="."]
visible = false
offset_left = 866.0
offset_top = -175.0
offset_right = 1069.0
offset_bottom = -106.0
text = "Keep pressing Space while in the air to glide with the rooster"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Step3" type="RichTextLabel" parent="."]
visible = false
offset_left = 2658.0
offset_top = -136.0
offset_right = 2861.0
offset_bottom = -67.0
text = "Jump on the cat to mount it"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Step4" type="RichTextLabel" parent="."]
visible = false
offset_left = 2658.0
offset_top = -136.0
offset_right = 2861.0
offset_bottom = -67.0
text = "The cat sees more and can jump higher"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="Step5" type="RichTextLabel" parent="."]
visible = false
offset_left = 3666.0
offset_top = -422.0
offset_right = 3869.0
offset_bottom = -353.0
text = "Additionally the cat can
use wall jumps to climb up steep walls"
fit_content = true
scroll_active = false
horizontal_alignment = 1
